responsive for ipad

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         </div>
     </nav>
     <section class="intro" style="text-align: left;">
-        <h1>Hello, I'm a full stack web developer <br> with a passion for UX|UI design <br> based out of Tempe, AZ.</h1>
+        <h1>Hello, I'm a full stack web developer
+            with a passion for UX|UI design
+            based out of Tempe, AZ.</h1>
     </section>
     <section class="biophoto" id="about">
         <div class="photoleftdiv">
