--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </section>
     <div class="footer">
         <a href="https://github.com/FaraahIbarra" style="color: black; font-size: 12px;">Github | </a>
-        <a href="https://github.com/FaraahIbarra" style="color: black; font-size: 12px;">LinkedIn </a>
+        <a href="www.linkedin.com/in/faraah-ibarra-5a0a071a8" style="color: black; font-size: 12px;">LinkedIn </a>
         <p style="font-size: 12px;">ibarra.faraah@gmail.com | 602.690.4802</p>
     </div>
 
